[tool.poetry]
name = "recsys-implementation"
version = "0.1.0"
description = ""
authors = ["sora kim <icon_o_clast@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^25.1.0"
isort = "^6.0.1"
pre-commit = "^4.2.0"
pytest = "^8.4.0"
torch = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
